[gd_scene load_steps=2 format=3 uid="uid://bcesevur25aim"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_6p21w"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6p21w")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Score" type="Label" parent="Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "0"

[node name="Text Window" type="ColorRect" parent="Control/MarginContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
color = Color(1, 1, 1, 0.933333)

[node name="BackgroundMargin" type="MarginContainer" parent="Control/MarginContainer/Text Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Background" type="ColorRect" parent="Control/MarginContainer/Text Window/BackgroundMargin"]
layout_mode = 2
color = Color(0.584314, 0.313726, 0.160784, 1)

[node name="ContentMargin" type="MarginContainer" parent="Control/MarginContainer/Text Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Text Window/ContentMargin"]
layout_mode = 2
size_flags_vertical = 0

[node name="DialogueName" type="Label" parent="Control/MarginContainer/Text Window/ContentMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Name
"
max_lines_visible = 1

[node name="Dialogue" type="Label" parent="Control/MarginContainer/Text Window/ContentMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 23
text = "This is a long ass text. OMG. What are you doing?
This is a longer ass text for you. OMG. What the hell are you doing?
Thi line shouldntÂ¡'t be visible."
max_lines_visible = 2

[node name="V" type="Label" parent="Control/MarginContainer/Text Window/ContentMargin"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "V "
horizontal_alignment = 2

[node name="ColorRect2" type="ColorRect" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(10, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(1, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PauseMenu" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseMenu"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Control/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Control/PauseMenu/VBoxContainer/Button" to="." method="_exitGame"]
